# templtest

./: pyproject.toml
.github/workflows/: test.yml
